# SLIC_cpp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  matrix.hpp  slic.hpp  util.cpp  util.hpp
